syntax = "proto3";

option java_package = "com.example.grpcrealserver";
option java_outer_classname = "HelloWorldProto";
option java_multiple_files = true;

package hello;

service HelloWorld {
  rpc HelloWorld(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  int32 index = 1;
  int32 weight = 2;
  string msg = 3;
}

message HelloResponse {
  string message = 1;
}